# PdnsPilot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-0cda45de2b77081c8b4cba77f935a1bf5582b698579f701259c739fd3290d726.json  query-13e7dfad394878d6274eccd9c9830ef32da8504b4de8bfde4ad69b0dc47be751.json  query-2056f51a9cd41922c87f76dee83f2d2e2fb8ce0560c91f12091d8770feedaf90.json  query-2573ca3ff41ee4e1ad017049c61b959ffccf4903e1b1277c5ef2759dbd5f052c.json  query-289d989468be84521fc54befb75831b72b05fe590b43e91d1e4483f3b744a8a5.json  query-2d7da9f158340594f772b1e56e4b24b7c5eaf7c3aae8d104abd30e2861e4c4b3.json  query-3008ad549ec1f4aa17a91b1b6838e648a20ea246fb79485a806e12b28622c957.json  query-3928145ca0ccd7f61f23bfbec79032dd0d1c2318470d94bd3f9b87f93c7072a9.json  query-3abe188cfc39a848d01b4dddf6a4ef8b79ab18c04b00b15e4320f7a429835448.json  query-3cebdbfd6944413371b6ddc866b52060af51e4bfa3d4ad528013ab6208f3bc41.json  query-550a285aa60359ea034261d9ed87eaa2b4d0678a62661d34875dd1f2f61c7d02.json  query-583b43b62c0695e9e497a710e0a252fb65abefbeb0b2f5046b315c771c62d5b3.json  query-588b7cf9b469c8cbbbceccd7678787019c42030642865660e79c536c1d961f8b.json  query-5897bbeb18222402f82481d9840d290736434b7d57b31df32252a25023c016b1.json  query-5ca66765a3ea797eeed9a63a6cfa8bacd7db3c3ecc7b949d988084700433c6d5.json  query-6565298ccabee8bb63c034a66d039186ec8ce54af2cfe220f06b94e1f463cb78.json  query-68f3a21a303fd3223873b56c328c23da96bd99e49165120107b817370bbdffae.json  query-6f29fabac7b009c3253ab951fe7b5884ab9a84c42361afd215fcf981ba94a267.json  (+36 more)
src/: auth.rs  config.rs  db.rs  (+4 more)
(+47 files in other folders)
