[package]
name = "pdns-rustadmin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdns-rustadmin"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["ws", "macros"] }
axum-extra      = { version = "0.9", features = ["cookie"] }
tokio           = { version = "1", features = ["full"] }
sqlx            = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
reqwest         = { version = "0.12", features = ["json"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
minijinja       = { version = "2", features = ["loader", "json"] }
argon2          = "0.5"
tower-http      = { version = "0.5", features = ["fs", "trace"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy         = "0.15"
sha2            = "0.10"
hex             = "0.4"
base64          = "0.22"
rand            = "0.8"
anyhow          = "1"
thiserror       = "1"
tokio-tungstenite = "0.23"
